--- a/Console-plane/info_files/stylesheet.css
+++ b/Console-plane/info_files/stylesheet.css
@@ -64,34 +64,34 @@ a:hover {
 }
 
 header {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 40px !important;
+  padding-bottom: 40px !important;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
-  border-bottom: solid 1px #275da1;
+  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x !important;
+  border-bottom: solid 1px #275da1 !important;
 }
 
 header h1 {
   letter-spacing: -1px;
-  font-size: 72px;
+  font-size: 72px !important;
   color: #fff;
   line-height: 1;
   margin-bottom: 0.2em;
-  width: 540px;
+  width: 540px !important;
 }
 
 header h2 {
-  font-size: 26px;
+  font-size: 26px !important;
   color: #9ddcff;
   font-weight: normal;
   line-height: 1.3;
-  width: 540px;
+  width: 540px !important;
   letter-spacing: 0;
 }
 
 .inner {
   position: relative;
-  width: 940px;
+  width: 940px !important;
   margin: 0 auto;
 }
 
@@ -129,13 +129,13 @@ aside#sidebar p.repo-owner a {
 }
 
 a.button {
-  width: 134px;
-  height: 58px;
+  width: 134px !important;
+  height: 58px !important;
   line-height: 1.2;
-  font-size: 23px;
+  font-size: 23px !important;
   color: #fff;
-  padding-left: 68px;
-  padding-top: 22px;
+  padding-left: 68px !important;
+  padding-top: 22px !important;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
 }
 a.button small {
@@ -143,10 +143,10 @@ a.button small {
   font-size: 11px;
 }
 header a.button {
-  position: absolute;
-  right: 0;
-  top: 0;
-  background: transparent url(../images/github-button.png) 0 0 no-repeat;
+  position: absolute !important;
+  right: 0 !important;
+  top: 0 !important;
+  background: transparent url(../images/github-button.png) 0 0 no-repeat !important;
 }
 aside a.button {
   width: 138px;
